2013/css/styles.css
/* ... */
#search input { width: 100%; }

body:not(:target) #nav {
    outline: 0;
    margin: 0;
    padding-top: 50px;
    position: fixed;
    top: -6px;
    right: 0;
    left: 0;
    z-index: 1000; 
	
}

body:not(:target) #nav a {
	border-bottom-width: 0;
	overflow: hidden;
	height: 0;
	line-height: 0;
	padding: 0 1em; 
}

body:not(:target) #nav:target {	z-index: 1001; }

body:not(:target) #nav:target a {
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
	line-height: 3em;
	height: 2.25em;
	padding: 0px 0 10px 14px;
	position: relative;
	z-index: 1;
	-moz-transition: height .25s, line-height .25s;
	-ms-transition: height .25s, line-height .25s;
	-o-transition: height .25s, line-height .25s;
	-webkit-transition: height .25s, line-height .25s;
	transition: height .25s, line-height .25s; 
}
body:not(:target) #nav:target #back {
	display: block;
	position: relative; 
}

body:not(:target) #nav:target #back a {
	background: transparent;
	border: 0;
	display: block;
	height: auto;
	line-height: 1;
	position: absolute;
	top: -101em;
	bottom: -101em;
	left: 0;
	right: 0;
	text-indent: -999em;
	z-index: 0; 
} 

	@media only screen and (min-width : 580px) {
		
		#jump { display: none;}
	 	
			body:not(:target) #nav { 
   			    position: absolute;
				width:90%; 
				margin: 0 auto; 
				z-index: 20; 
				border-bottom: 3px solid rgba(255,255,255,1); 
				padding:35px 0 1px;
			}
			
		  	body:not(:target) #nav a {
		  		border-bottom-width: 0;
				border-bottom: 0px;
		  		font-weight: bold;
		  		overflow: hidden;
		  		height: 50px;
		  		line-height: 1em;
		  		padding: 0 1em;
		  		font-family:"Karmina Sans Light", "Lucida Grande", "Lucida Sans Unicode", sans-serif; 
		  		font-weight:200; 
		  		font-style:normal; 
		  		font-size:1em;
		  		letter-spacing:.08em; 
		  		text-transform:uppercase;
		  		color:#fff; 
		  		background: none;
		  		display:inline;
		  		position:relative;
				
		  	}
			
		  	body:not(:target) #nav li { float: left; text-align:left; width:33%; padding:0 0 10px 0;}
			body:not(:target) #nav li a{ padding: 0; 	font-family:"Karmina Sans Light", "Lucida Grande", "Lucida Sans Unicode", sans-serif;  font-weight:bold; font-style:normal; }
		.menu-toggle { display:none;}
		#back{ display: none; }
		
		
	}
	@media only screen and (min-width : 720px) {
		body:not(:target) #nav { width: 86%; }
	}
	@media only screen and (min-width : 860px) {
		body:not(:target) #nav a { font-size:1em; }
		body:not(:target) #nav a:hover { color: #fff064!important; }
		body:not(:target) #nav li { width:16%;}
	}	




/* #################################################################################################################################### */ 
/* #############  MAIN CONTENT  ############################################################################################################# */
/* #################################################################################################################################### */
		  

/* MAIN CONTENT */
.main-content { position: relative; top:40px; padding: 25px 5% 60px;  }
.main-content:after {
	content: '';
	height: 100%;
	position: absolute;
	border-bottom: none;
	border-radius: 0 0 3px 3px;
	z-index: -90;
	right: 0;
	left:0px;
	top:-10px;
	background-color: rgba(0,0,0, 0.4) ;
	-ms-transform: skew(0deg,-2deg); 
	-webkit-transform: skew(0deg,-2deg); 
	-o-transform: skew(0deg,-2deg); 
	-moz-transform: skew(0deg,-2deg);
	clear:both;
}
.main-content:before {
	content: '';
	height: 100%;
	position: absolute;
	border-bottom: none;
	border-radius: 0 0 3px 3px;
	z-index: -90;
	right: 0;
	left:0px;
	top:-7px;
	background-color: rgba(0,0,0, 0.3) ;
	-ms-transform: skew(0deg,2deg); 
	-webkit-transform: skew(0deg,2deg); 
	-o-transform: skew(0deg,2deg); 
	-moz-transform: skew(0deg,2deg);
}

.main-content h1 { font-size:1.5em; line-height:1.1em; margin:20px 0;  }
.main-content p { font-family:"Karmina Sans Light", "Lucida Grande", "Lucida Sans Unicode", sans-serif; font-size:1em; font-weight: 200; line-height:1.4em; }
.main-content  .presentation-title{ font-size: 0.7em; }
	@media only screen and (min-width : 580px) {
		.main-content { padding-top:130px; }
	}
	@media only screen and (min-width : 720px) {
		.main-content { padding: 130px 7% 60px;}
		
	}
	@media only screen and (min-width : 860px) {
		.main-content {  top:45px; padding-top:90px;}
		}	
	@media only screen and (min-width : 1024px) {	
		.main-content h1 { font-size:2.25em; margin-top: 1%; width: 80%;}
	}
	
	
/* #################################################################################################################################### */ 
/* #############  FOOTER  ############################################################################################################# */
/* #################################################################################################################################### */	

/* FOOTER SECTION */
.sponsors{ margin:120px 0 0 0; padding: 0 5%; clear:both; }
.sponsors h2 { font-size: 1em; font-family:"Karmina Sans Light", "Lucida Grande", "Lucida Sans Unicode", sans-serif; font-weight: 200; color: #fff064; margin-top: 30px; }



.sponsors img { margin:12px; }

.social { position:relative; background-color: rgba(0,0,0, 0.3); padding:23px 0 12px 0; text-align:center; }
.social h3 { font-size: .9em; letter-spacing:.07em;}
.social ul { margin: 0; overflow: hidden; }
.social ul li a{ float:left; margin:12px 7%; text-indent:-99999px; }
.social #twitter { background:url('../images/icon-twitter.png') 0 0 no-repeat; width:43px; height:43px; }
.social #rss { background:url('../images/icon-rss.png') 0 0 no-repeat; width:43px; height:43px; }
.social #lanyrd { background:url('../images/icon-lanyrd.png') 0 0 no-repeat; width:43px; height:43px; }
.social #ical { background:url('../images/icon-iCal.png') 0 0 no-repeat; width:43px; height:43px; }		
.social-subtext { display: none;}	
/* ... */

